# finbar

./: .env.example  .gitignore  README.md  pyproject.toml  run_api.py  run_mcp.py  start_mcp.bat
.pi/extensions/: finbar.ts
docs/: ARCHITECTURE.md  BACKTESTING.md  DATA.md  OPTIMIZATION.md  QUANTITATIVE_PROXIES.md  SETUP.md  backtest_execution_model.md  hyperliquid-plan.md  plan.md
finbar/: __init__.py
finbar/config/: settings.py
finbar/infrastructure/: logging_config.py
finbar/startup/: api.py  bootstrap.py  mcp.py  service_factory.py
plans/: context_optimization_plan.md
tests/: conftest.py
tests/fakes/: fake_artifact_provider.py
tests/test_application/: test_apply_indicators.py  test_auction_drive_json.py  test_backtest_result_access.py  test_enrichment_jobs.py  test_fallback_indicators.py  test_fetch_prices.py  test_optimization_jobs.py  test_run_backtest.py  test_run_portfolio_backtest.py  test_strategy_capabilities.py  test_strategy_json_multi_timeframe.py  test_strategy_json_sdk.py
tests/test_domain/: test_entities.py  test_metrics.py  test_proxy_indicator.py  test_rolling_metrics.py
tests/test_infrastructure/: test_artifact_persistence.py  test_backtest.py  test_backtest_edge_cases.py  test_backtest_golden_scenarios.py  test_hyperliquid_fetcher_edge_cases.py  test_indicator_calculator.py  test_intrabar_exit_resolver.py  test_margin_account_manager.py  test_parameterized_indicators.py  test_position_sizer.py  test_rule_based_strategy.py  test_storage_optimizations.py  test_strategies.py  test_strategy_document_repo.py  test_strategy_repo.py  (+3 more)
(+340 files in other folders)
